<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TwoPanelsDemo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="horizontal">Horizontal</string>
    <string name="vertical">Vertical</string>
    <string name="switch_sliders_buttons">Switch sliders buttons</string>
    <string name="slide_left_animate">Slide Left animate</string>
    <string name="slide_right_animate">Slide right animate</string>
    <string name="hide_left">Hide Left</string>
    <string name="hide_right">Hide right</string>
    <string name="switch_slider">Switch slider</string>
    <string name="detail">Detail</string>
    <string name="show_two_fragments">Show two fragments</string>

</resources>
